--- a/index.html
+++ b/index.html
@@ -1,52 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>HREXT10 R00lz!</title>
-  <script
+<html>
+  <head>
+    <title>to-dos</title>
+    <script
           src="https://code.jquery.com/jquery-3.3.1.js"
           integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
           crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
- </head>
-<body class="m-3">
-  <div class="container">
-    <div class="row mb-3">
-      <div class="input-group col-sm-5">
-        <div class="input-group-prepend">
-          <label class="input-group-text">Key</label>
-        </div>
-        <input class="key form-control" type="text">
-      </div>
-      <div class="input-group col-sm-5">
-        <div class="input-group-prepend">
-          <label class="input-group-text">Value</label>
-        </div>
-        <input class="value form-control" type="text">
-      </div>
-      <button class="reset btn btn-danger btn-sm col-sm-2">Reset Input</button>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
+
+  </head>
+  <body>
+    <h1>to-dos</h1>
+
+    <div class="inbox">
+    <ul class="tasks">
+      <li>to-dos</li>
+    </ul>
+    <form class="add-items">
+      <input type="checkbox" id="checkAll">Check All
+      <input type="text" name="item" placeholder="New Task" required>
+      <input type="submit" value="Add">
+      <input type="delete" value="Delete" name="delete">   
+    </form>
     </div>
-    <div class="row mb-3 justify-content-center">
-      <button class="create btn btn-success btn-sm mr-2 col-sm-2">Create</button>
-      <button class="update btn btn-primary btn-sm mr-2 col-sm-2">Update</button>
-      <button class="delete btn btn-warning btn-sm mr-2 col-sm-2">Delete</button>
-      <button class="clear btn btn-danger btn-sm mr-2 col-sm-3">Clear Database</button>
-    </div>
-    <div class="row">
-      <table class="table table-striped table-hover table-dark">
-        <thead>
-          <tr>
-            <th scope="col">Key</th>
-            <th scope="col">Value</th>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <script src="app/app.js"></script>
-</body>
+
+  
+    
+    <script src="app/app.js"></script>
+  </body>
 </html>
